--- a/index.html
+++ b/index.html
@@ -1,90 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello World</title>
     <link rel="stylesheet" href="styles/styles.css" />
-</head>
+  </head>
 
-<body class="body_section">
+  <body class="body_section">
     <!-- hero section  -->
     <section class="hero">
-        <div class="hero_left">
-            <p class="hero_sub_title">Bangladesh 2.0</p>
-            <h3 class="hero_title">
-                Idea , innovation , vision and challenges in New Bangladesh.
-            </h3>
-            <button class="hero_button">Explore New Bangladesh</button>
-        </div>
-        <div class="hero_right">
-            <img class="banner_img" src="B11A1--assignment-1/assets/hero.png" alt="" />
-        </div>
+      <div class="hero_left">
+        <p class="hero_sub_title">Bangladesh 2.0</p>
+        <h3 class="hero_title">
+          Idea , innovation , vision and challenges in New Bangladesh.
+        </h3>
+        <button class="hero_button">Explore New Bangladesh</button>
+      </div>
+      <div class="hero_right">
+        <img
+          class="banner_img"
+          src="B11A1--assignment-1/assets/hero.png"
+          alt=""
+        />
+      </div>
     </section>
 
     <!-- vision and future section  -->
     <section class="no">
-        <h1 class="hero_title">The Vision of Future</h1>
-        <p class="peragrap">
-            Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
-            cutting-edge technology, promoting inclusive growth, and ensuring
-            sustainability. With initiatives in renewable energy, digital
-            transformation, and robust infrastructure, the country is set to become
-            a global model of development.
-        </p>
-        <div class="number">
-            <div class="number_1">
-                <img src="B11A1--assignment-1/assets/card-icon.png" alt="" />
-                <h3>Digital Transformation</h3>
-                <p>
-                    Creating a nationwide digital ecosystem to enhance connectivity and
-                    access to services for all citizens.
-                </p>
-                <button class="nil">Learn More</button>
-            </div>
-            <div class="number_2">
-                <img src="B11A1--assignment-1/assets/card-icon.png" alt="" />
-                <h3>Green Energy</h3>
-                <p>
-                    Investments in solar and wind energy to ensure a sustainable and
-                    eco-friendly future.
-                </p>
-                <button class="sobuj">Learn More</button>
-            </div>
-            <div class="number_3">
-                <img src="B11A1--assignment-1/assets/card-icon.png" alt="" />
-                <h3>Modern Infrastructure</h3>
-                <p>
-                    Building state-of-the-art infrastructure to support economic growth
-                    and global competitiveness.
-                </p>
-                <button class="holud">Learn More</button>
-            </div>
+      <h1 class="hero_title">The Vision of Future</h1>
+      <p class="peragrap">
+        Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+        cutting-edge technology, promoting inclusive growth, and ensuring
+        sustainability. With initiatives in renewable energy, digital
+        transformation, and robust infrastructure, the country is set to become
+        a global model of development.
+      </p>
+      <div class="number">
+        <div class="number_1">
+          <img src="B11A1--assignment-1/assets/card-icon.png" alt="" />
+          <h3>Digital Transformation</h3>
+          <p>
+            Creating a nationwide digital ecosystem to enhance connectivity and
+            access to services for all citizens.
+          </p>
+          <button class="nil">Learn More</button>
         </div>
+        <div class="number_2">
+          <img src="B11A1--assignment-1/assets/card-icon.png" alt="" />
+          <h3>Green Energy</h3>
+          <p>
+            Investments in solar and wind energy to ensure a sustainable and
+            eco-friendly future.
+          </p>
+          <button class="sobuj">Learn More</button>
+        </div>
+        <div class="number_3">
+          <img src="B11A1--assignment-1/assets/card-icon.png" alt="" />
+          <h3>Modern Infrastructure</h3>
+          <p>
+            Building state-of-the-art infrastructure to support economic growth
+            and global competitiveness.
+          </p>
+          <button class="holud">Learn More</button>
+        </div>
+      </div>
     </section>
     <!-- Recent News -->
     <section>
-        <h1>Recent News</h1>
-        <p class="peragrap">
-            Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
-            cutting-edge technology, promoting inclusive growth, and ensuring
-            sustainability. With initiatives in renewable energy, digital
-            transformation, and robust infrastructure, the country is set to become
-            a global model of development.
-        </p>
-        <div>
-            <div><img src="B11A1--assignment-1/assets/satelite.png" alt=""></div>
-            <div>
-                <h1>Bangladesh Launches New Satellite</h1>
+      <h1>Recent News</h1>
+      <p class="peragrap">
+        Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+        cutting-edge technology, promoting inclusive growth, and ensuring
+        sustainability. With initiatives in renewable energy, digital
+        transformation, and robust infrastructure, the country is set to become
+        a global model of development.
+      </p>
+      <div class="news">
+        <div class="image_container">
+          <img
+            class="news_img1"
+            src="B11A1--assignment-1/assets/satelite.png"
+            alt=""
+          />
+        </div>
+        <div class="news1_details_container">
+          <h1 class="news_details_title">Bangladesh Launches New Satellite</h1>
+          <img class="news_details_img" src="B11A1--assignment-1/assets/al-jazeera.png" alt="">
+          <p>
+            Not until the creation and maintenance of decent conditions of life
+            for all people are recognized and accepted as a common obligation of
+            all people and all countries—not until then shall we, with a certain
+            degree of justification, be able to speak of humankind as civilized
+          </p>
+          <button class="news_btn">Read More</button>
+        </div>
+      </div>
+      <div class="news">
+        <div class="news1_details_container">
+            <h1 class="news_details_title">Bangladesh Launches New Satellite</h1>
+            <img class="news_details_img" src="B11A1--assignment-1/assets/al-jazeera.png" alt="">
+            <p>
+              Not until the creation and maintenance of decent conditions of life
+              for all people are recognized and accepted as a common obligation of
+              all people and all countries—not until then shall we, with a certain
+              degree of justification, be able to speak of humankind as civilized
+            </p>
+            <button class="news_btn">Read More</button>
+          </div>
+        <div class="image_container">
+          <img
+            class="news_img1"
+            src="B11A1--assignment-1/assets/satelite.png"
+            alt=""
+          />
+        </div>
+      </div>
+    </section>
 
+    <!-- donate section  -->
+    <section class="donate_section">
+        <h1 class="donate_title">Donate Today</h1>
+        <p class="donate_description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+        <div class="donate_container">
+            <div class="donate">100 Taka</div>
+            <div class="donate custom_donate">200 Taka</div>
+            <div class="donate ">500 Taka</div>
+            <div class="donate">1000 Taka</div>
+        </div>
 
-                <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
-                    with a certain degree of justification, be able to speak of humankind as civilized</p>
+        <div class="amount">
+            Other Amount(Taka)
+        </div>
 
-            </div>
+        <div class="btn_container">
+            <button class="btn">Done Now</button>
         </div>
     </section>
-</body>
-
+  </body>
 </html>
